css/general.css
body{
    font-family: "Helvetica Neue", Helvetica, sans-serif;
    font-weight: 200;
    font-size: clamp(16px, 1vw + 12px, 20px);
    margin: 0px;
    min-height: 100vh;
    min-height: 100dvh;

    display: flex;
    flex-direction: column;
}

body.home-active{
    height: 100vh;
    height: 100dvh;
    overflow: hidden;
}

h1,
h2{
    margin: 0;
    font-weight: 300;
    font-size: clamp(24px, 1vw + 16px, 32px);
}

button{
    border-width: 0px;
    background-color: transparent;
    font: inherit;
    font-size: clamp(18px, 1vw + 12px, 24px);
    padding: 0;
}
.project-button{
    color: grey;
    text-transform: uppercase;
    font-size: clamp(14px, 1.25vw + 10px, 20px);
}
.tab-button:hover{
    text-decoration: underline;
    cursor: pointer;
}

